<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prairieland Adventures</string>
    <string name="app_id">1018609306784</string>
    <string name="ldr_fastest_times_lvl1_id">CgkIoJniztIdEAIQBg</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_menu">PrairieLand Adventures Menu</string>
    <string name="menuCampaign">Campaign</string>
    <string name="campaignscreen">Campaign Map</string>
    <string name="mainmenugraphic">Main Menu</string>
    <string name="title_activity_first_level">PrairieLand Adventures First Campagin Level</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_shop">Adventurer\'s Shop</string>
    <string name="title_activity_unlock">Unlocked Pete!</string>
    <string name="banner_ad_unit_id">ca-app-pub-2191584377614702/3740161072</string>

    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>

    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>

    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="signin_failure">\"Signin Failure\"</string>
    <string name="achievements_not_available">Please sign in to view acheivements</string>
    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>
    <string name="leaderboard_id_fastest">CgkIoJniztIdEAIQBg</string>
    <string name="leaderboards_id_highest">CgkIoJniztIdEAIQCA</string>
    <string name="unit_challenges">Unit Challenges</string>
    <string name="multiplayer_options">Multiplayer Options</string>
    <string name="challenge_2_ndemonstrative_adjectives_amp_pronouns"><![CDATA[Challenge 2\nDemonstrative Adjectives & Pronouns]]></string>
    <string name="challenge_3_npreterite_tense">Challenge 3\nPreterite Tense</string>
    <string name="challenge_1_nvocabulary">Challenge 1\nVocabulary</string>
    <string name="view_challenge_leaderboard">View Challenge Leaderboard</string>
    <string name="view_achievements">View Achievements</string>


    <string-array name="chapters_array">
        <item>Unit 2.1</item>
        <item>Unit 2.2</item>
        <item>Unit 2.3</item>
    </string-array>

</resources>
