<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bigskyway.skyler.prairielandadventures2.MultiplayerMenuActivity">

    <LinearLayout
        android:id="@+id/llayMultPlayerMain"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?android:attr/colorBackground"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_weight="0.04"
            android:gravity="center_horizontal"
            android:text="@string/multiplayer_options"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#020202"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvUnitChallenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.11"
            android:gravity="center_horizontal"
            android:text="@string/unit_challenges"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#030303" />

        <Spinner
            android:id="@+id/spUnit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:foregroundGravity="center"
            android:gravity="center_horizontal"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvU21Chal1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:onClick="launchUnit21FirstChallenge"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/challenge_1_nvocabulary"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0871ed" />

        <TextView
            android:id="@+id/tvU21Chal2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:gravity="center_horizontal"
            android:text="@string/challenge_2_ndemonstrative_adjectives_amp_pronouns"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0871ed" />

        <TextView
            android:id="@+id/tvU21Chal3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_weight="0.13"
            android:gravity="center_horizontal"
            android:text="@string/challenge_3_npreterite_tense"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0871ed" />

        <TextView
            android:id="@+id/tvViewLeaderboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.11"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:onClick="showLeaderboards"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/view_challenge_leaderboard"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/tvViewAchievements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.11"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:onClick="showAchievements"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/view_achievements"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_blue_dark" />

        <fragment
            android:id="@+id/fragmentGooglePlaySwitch"
            android:name="com.bigskyway.skyler.prairielandadventures2.EnableGooglePlayFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            tools:layout="@layout/fragment_enable_google_play" />

    </LinearLayout>
</RelativeLayout>
